--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <div id="channels">
     <h1>
         <!-- #3 #channels #moocus the talkative duck-->
-        <img src="http://ip.lfe.mw.tum.de/sections/moocus.png" alt="Moocus, the chatty duck!" style="height: 56px;">
+        <!--Definitions of inline CSS for the Duck image-->
+        <img src="http://ip.lfe.mw.tum.de/sections/moocus.png" alt="Moocus, the chatty duck!" style="position: relative;  bottom: 0px; height: 56px; margin-right: 16px;">
         chatter|app
     </h1>
 
@@ -25,26 +26,46 @@
     <ul>
         <li>#Yummy
             <!-- #3 #channels #favorite this is not starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
+            <span class="channel-meta">
+                <!--Second image of chevron right included here-->
+                <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
+                <img src="https://ip.lfe.mw.tum.de/sections/chevron-right.png" alt="chevron-right">
+               </span>
         </li>
 
         <!-- #4 #channel is #highlighted -->
         <li class="selected">
             #SevenContinents
             <!-- #3 #channels #favorite this is starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star.png" alt="starred">
+            <span class="channel-meta">
+                <!--Second image of chevron right included here-->
+                <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
+                <img src="https://ip.lfe.mw.tum.de/sections/chevron-right.png" alt="chevron-right">
+            </span>
         </li>
         <li>#KillerApp
             <!-- #3 #channels #favorite this is not starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
+            <span class="channel-meta">
+                <!--Second image of chevron right included here-->
+             <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
+             <img src="https://ip.lfe.mw.tum.de/sections/chevron-right.png" alt="chevron-right">
+            </span>
         </li>
         <li>#FirstPersonOnMars
             <!-- #3 #channels #favorite this is starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star.png" alt="starred">
+            <span class="channel-meta">
+                <!--Second image of chevron right included here-->
+                <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
+                <img src="https://ip.lfe.mw.tum.de/sections/chevron-right.png" alt="chevron-right">
+            </span>
         </li>
         <li>#Octoberfest
             <!-- #3 #channels #favorite this is not starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
+            <span class="channel-meta">
+                <!--Second image of chevron right included here-->
+                <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
+                <img src="https://ip.lfe.mw.tum.de/sections/chevron-right.png" alt="chevron-right">
+            </span>
         </li>
     </ul>
 
@@ -91,8 +112,10 @@
             Wed, June 20th, 13:37
             <em>15 min. left</em>
         </h3>
-        <p>What's the place you folks call home?</p>
-        <button>+5 min.</button>
+        <!--"5+MIN"-Button was integrated into the paragraph here -->
+        <p>What's the place you folks call home?
+            <button>+5 min.</button>
+        </p>
     </div>
 
     <!-- #3 #chat #container -->
@@ -106,8 +129,10 @@
             Wed, June 20th, 13:39
             <em>4 min. left</em>
         </h3>
-        <p>BRISBANE! Hang loose!</p>
-        <button>+5 min.</button>
+        <!--"5+MIN"-Button was integrated into the paragraph here -->
+        <p>BRISBANE! Hang loose! 
+            <button>+5 min.</button>
+        </p> 
     </div>
 
     <!-- #3 #chat #container -->
@@ -121,8 +146,10 @@
             Wed, June 20th, 14:02
             <em>12 min. left</em>
         </h3>
-        <p>The big apple.</p>
-        <button>+5 min.</button>
+        <!--"5+MIN"-Button was integrated into the paragraph here -->
+        <p>The big apple.
+            <button>+5 min.</button>
+        </p>
     </div>
 
     <!-- #3 #chat #container -->
@@ -136,8 +163,10 @@
             Wed, June 20th, 14:02
             <em>7 min. left</em>
         </h3>
-        <p>Eu sou um Cariocas.</p>
-        <button>+5 min.</button>
+        <!--"5+MIN"-Button was integrated into the paragraph here -->
+        <p>Eu sou um Cariocas.
+            <button>+5 min.</button>
+        </p>
     </div>
 
     <!-- #3 #chat #container -->
@@ -151,8 +180,10 @@
             Wed, June 20th, 14:07
             <em>14 min. left</em>
         </h3>
-        <p>Greetings from the western cape!</p>
-        <button>+5 min.</button>
+        <!--"5+MIN"-Button was integrated into the paragraph here -->
+        <p>Greetings from the western cape!
+           <button>+5 min.</button>
+        </p>
     </div>
 
     <!-- #3 #chat #container -->
@@ -166,8 +197,25 @@
             Wed, June 20th, 04:08
             <em>15 min. left</em>
         </h3>
-        <p>北京</p>
-        <button>+5 min.</button>
+        <!--"5+MIN"-Button was integrated into the paragraph here -->
+        <p>北京
+            <button>+5 min.</button>
+        </p>
+    </div>
+
+    <!-- The smiley chat bar is integrated here and properly formatted -->
+    <div id="chat-bar">
+        <button id="emojis-button">
+            <img src="http://ip.lfe.mw.tum.de/sections/smile-o.png" alt="emoji">
+        </button>
+
+        <!-- Emoji list in this DIV-->
+        <div id="emojis">
+            &#x1F601; &#x1F602; &#x1F604; &#x1F604; &#x1F605;
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nihil ipsam illo officiis veniam est quae, nostrum sunt vero placeat voluptas corrupti cumque voluptatum reiciendis velit deleniti. Deserunt, veritatis aliquam. -->
+
+        </div>
+        
     </div>
 </div>
 
